2007-??-?? NetworkEditor 0.4.4 SVN $Revision$
''
 * Using CLAM 0.99.0

2006-02-09 NetworkEditor 0.4.3
'Mac is back to stay'
 * Using CLAM 0.98 
 * Using new bundle and dmg tools
 * New icon for Prototyper
 * Fix: Open toolbox button did't work after the recent files modification
 * Down arrow hint on the open toolbox button icon
 * Fix: On quit action quit
 * Shortcuts for printing and quiting
 * Oscilloscope added to the FilePlayer example
 * KDE3 desktop integration (Mime actions, file icons)

2006-12-30 NetworkEditor 0.4.2 
'Debian Packages: less is more'
 * Open recent files option
 * Using CLAM 0.97.0

2006-12-22 NetworkEditor 0.4.1
'The most stable NetworkEditor ever'
 * Using CLAM 0.96.0
 * CLAM Networks as VST plugins
 * Fix: OutControlSenders resends its last value (or default) on start
 * Fix: Removing processing with connected controls caused crash. 
   Now controls links are bidirectional.
 * Fix: NetworkEditor crashed when playing and done a add/remove/configure 
   processing or add/remove wire.  Now the network stops gacefully. 

2006-12-04 NetworkEditor 0.4.0
'California release'
 * Using CLAM 0.95.0
 * Ported to Qt4 and fully rewritten
 * New network canvas engine
   ** Scrollbars and zoom
   ** Big connectors to ease the connections
   ** Consistent sizes of drawn elements
   ** Hovering a connector highlights it
   ** Hovering a connector displays a tooltip with its name
   ** Connector tooltips and highlights helps to figure out were you are going
      to drop the wire
   ** Dropping wire highlight color tells whether it will drop or not 
     (redish: wrong; greenish correct)
   ** Missconfigured processings show a tooltip with the error
   ** Context menus for processings and connectors
   ** Dragging from the processing toolbox displays a processing icon
   ** Semitransparent processing boxes
   ** Copying connector names for their use in the Prototyper
   ** Printing networks and exporting ps/pdf